Fix 3.3.3 (#625)
* fix: CURRENT_BIZZ

* fix: cascadingField

* fix: select2 placeholder cut off

* be: var of CURRENT()

* 3.3.3

* be: trim for search

* Remove gh action

--- a/src/main/resources/web/assets/css/rb-page.css
+++ b/src/main/resources/web/assets/css/rb-page.css
@@ -845,6 +845,10 @@ body.view-body {
   color: #404040;
 }
 
+.select2-container--default .select2-selection--multiple .select2-search--inline .select2-search__field {
+  width: 100% !important;
+}
+
 .select2-container--default.select2-container--focus .select2-selection.select2-selection--multiple {
   border-color: #4285f4;
 }
